tests/agl/rejections/type/no_finite_schema_cast.agl
record Pair[A, B]
  first: A
  second: B

enum Perfect[T]
  | Single(value: T)
  | Succ(next: Perfect[Pair[T, T]])

let raw: text = "{}"
let x = raw as Perfect[int]
x
